2014-12-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Master.svg:
	* BrowserWindow.cpp:
	* AnimationEditor.xml:
	* MFBool.svg:
	* AnimationEditor.cpp:
	* X3DExecutionContext.svg:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-12-05  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp: 

2014-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: 

2014-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* SquadInterpolator.h:
	* AnimationEditor.cpp: 

2014-12-04  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* SquadInterpolator.h: 

2014-12-03  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointEditor.xml:
	* ViewpointEditor.h:
	* ViewpointEditor.cpp:
	* X3DViewpointEditorInterface.h:
	* X3DViewpointEditorInterface.cpp: 

2014-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.cpp: 

2014-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp: 

2014-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.cpp: 

2014-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp: 
