@@ -1,5 +1,9 @@
 2014-12-05  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* AnimationEditor.cpp: 
+
+2014-12-05  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Master.svg:
 	* BrowserWindow.cpp:
 	* AnimationEditor.xml:
